[gd_scene load_steps=6 format=3 uid="uid://d3dfww3d05g5c"]

[ext_resource type="Script" path="res://Character/character.gd" id="1_5djl3"]
[ext_resource type="Texture2D" uid="uid://drh3ehm1wf71o" path="res://Assets/enemy_1.png" id="1_qs5wt"]
[ext_resource type="Texture2D" uid="uid://mbr5swu0aakr" path="res://Assets/icon_selection.png" id="3_8546l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47y0p"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsvqj"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_5djl3")

[node name="MainTexture" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_qs5wt")

[node name="Focus" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-68.5, -9.5)
scale = Vector2(3, 3)
texture = ExtResource("3_8546l")

[node name="HealthBar" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = -58.0
offset_top = -83.0
offset_right = 59.0
offset_bottom = -56.0
theme_override_styles/background = SubResource("StyleBoxFlat_47y0p")
theme_override_styles/fill = SubResource("StyleBoxFlat_rsvqj")
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -20.0
offset_top = -113.0
offset_right = 21.0
offset_bottom = -90.0
text = "1/1"
horizontal_alignment = 1
